--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="lbl_delete">Delete task</string>
     <string name="lbl_totop">Move task to top</string>
     <string name="lbl_toend">Move task to button</string>
+    <string name="lbl_prioritize">Prioritize task</string>
+    <string name="add_item">Add</string>
+    <string name="priority_low">Low</string>
+    <string name="priority_medium">Medium</string>
+    <string name="priority_high">High</string>
 </resources>
